# notion-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  notion-cli.example.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
config/examples/: minimal.toml  youtube.toml
docs/: agent-cli.md  skill.md
docs/superpowers/plans/: 2026-06-21-notion-cli-implementation.md  2026-06-25-release-0.2.1.md
docs/superpowers/specs/: 2026-06-21-notion-cli-design.md
skills/notion-cli-agent/: SKILL.md
skills/notion-cli-agent/agents/: openai.yaml
skills/notion-cli-agent/references/: agent-cli.md  configuration.md
src/notion_cli/: cli.py  config.py  errors.py  exec.py  http_api.py  render.py  resolver.py  youtube.py
tests/: test_cli.py  test_config.py  test_exec.py  test_render.py  test_repo_metadata.py  test_resolver.py  test_youtube.py
