[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "notion-cli"
version = "0.2.0"
description = "Config-driven wrapper around the official Notion CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "asuslin" }]
dependencies = [
  "pydantic>=2.11.0",
  "typer>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "pytest>=9.0.0",
  "ruff>=0.15.0",
  "yt-dlp>=2025.6.9",
]

[project.scripts]
notion-cli = "notion_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["notion_cli"]
